# MeterMate

./: .devcontainer.json  .editorconfig  .gitignore  .pre-commit-config.yaml  .ruff.toml  .strict-typing  EXAMPLES.md  IMPLEMENTATION_SUMMARY.md  LICENSE  PRD.md  README.md  add_historical_service.py  devbox.json  examples_service_calls.py  hacs.json  pyproject.toml  requirements.txt
.github/ISSUE_TEMPLATE/: bug.yml  feature_request.yml
.github/workflows/: validate.yml
config/: configuration.yaml
custom_components/metermate/: __init__.py  binary_sensor.py  config_flow.py  const.py  coordinator.py  data.py  data_manager.py  database.py  manifest.json  models.py  panel.py  sensor.py  services.py  services.yaml  switch.py
custom_components/metermate/frontend/: README.md  api.js  ha-icon-polyfill.js  ha-metermate-panel.js  index.html  meter-panel.js  metermate-panel.js  styles.css  ui-components.js
custom_components/metermate/frontend/src/components/: ha-metermate-panel.js  meter-selection.js  metermate-panel.js  ui-components.js
custom_components/metermate/frontend/src/services/: api.js
custom_components/metermate/frontend/src/styles/: main.css
custom_components/metermate/translations/: en.json
scripts/: develop  migrate_data.py
