[project]
name = "metermate"
version = "0.1.0"
description = "Your smart friend for your dumb meter"
readme = "README.md"
requires-python = ">=3.13.2"
dependencies = [
    "colorlog==6.9.0",
    "homeassistant==2025.6.1",
    "pip==25.1.1",
]

[dependency-groups]
dev = [
    "pre-commit==4.2.0",
    "ruff==0.12.9",
]

[tool.ruff]
# Exclude a variety of commonly ignored directories.
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "venv",
]
